<resources>
    <string name="app_name">FuturePlan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile">Profile</string>
    <string name="schedule">Schedule</string>
    <string name="pomoce">Study aids</string>
    <string name="timetable">Timetable</string>
    <string name="flashcards">Flashcards</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="about_app">About app</string>

    <string name="organizacja">Organization</string>
    <string name="nauka">Science</string>
    <string name="others">Others</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="logging">Log-in</string>
    <string name="rej">Registration</string>

    <string name="first_name">First name</string>
    <string name="username">Username</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="Email">Email</string>
    <string name="powHaslo">Confirm password</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="authors">Authors</string>
    <string name="authors_description">Dominik Skąpski, Julia Podolak, Julia Korzekwa</string>
    <string name="year_of_creation">Year of creation : 2021–2022</string>
    <string name="app_description">Android Studio and the Java programming language were used to develop the application</string>
    <string name="choose_language">Choose language</string>

    <string name="polish">Polish</string>
    <string name="english">English</string>
    <string name="german">German</string>

    <string name="polish_lang">Polish</string>
    <string name="infromatics">Infromatics</string>
    <string name="history">History</string>
    <string name="mathematics">Mathematics</string>
    <string name="databases">Databases</string>
    <string name="phone_number">Phone number</string>
    <string name="birth_date">Date of birth</string>
    <string name="log_out">Log out</string>
    <string name="new_note">New note</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="delete_set">Remove the set</string>
    <string name="note">Note</string>
    <string name="front">Front</string>
    <string name="add_new_flashcard_set">Add new flashcard set</string>
    <string name="choose_subject">Choose subject</string>
    <string name="choose_date">Choose date</string>
    <string name="classroom">Classroom</string>
    <string name="start_and_end_time">Start and end time</string>
    <string name="description">Description</string>
    <string name="name_of_the_set">Name of the set</string>
    <string name="study">Study!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="tests">Tests</string>
    <string name="homework">Homework</string>
    <string name="share">share</string>
    <string name="view_shared">shared flashcards</string>
    <string name="shared_by">Shared by</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="choose">Choose</string>
    <string name="change_motive">Change motive</string>
    <string name="light">light</string>
    <string name="dark">dark</string>


</resources>