<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorBackground">

    <item android:title="@string/organizacja">
        <menu>
            <item
                android:id="@+id/menuTerminarz"
                android:icon="@drawable/terminarz"
                android:title="@string/schedule"/>

            <item
                android:id="@+id/menuPlanLekcji"
                android:icon="@drawable/plan"
                android:title="@string/timetable"/>
        </menu>
    </item>

    <item android:title="@string/nauka">
        <menu>
            <item
                android:id="@+id/menuPomoceNaukowe"
                android:icon="@drawable/pomoce"
                android:title="@string/pomoce"/>

            <item
                android:id="@+id/menuFiszki"
                android:icon="@drawable/fiszki"
                android:title="@string/flashcards"/>

            <item
                android:id="@+id/menuNotatki"
                android:icon="@drawable/notatki"
                android:title="@string/notes"/>
        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/profileEmail"
                android:icon="@drawable/profile_icon2"
                android:title="@string/profile"/>
            <item
                android:id="@+id/menuUstawienia"
                android:icon="@drawable/ustawienia"
                android:title="@string/settings"/>

            <item
                android:id="@+id/menuoAplikacji"
                android:icon="@drawable/oaplikacji"
                android:title="@string/about_app"/>
        </menu>
    </item>
</menu>