<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".EditHomework">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtinput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/przedmioty_ikona"
        android:textColorHint="@color/textColor">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/textColor"/>
            android:text="@string/choose_subject" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dayEdTxt"
        android:layout_width="match_parent"
        android:layout_height="190px"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_txt_note"
        android:drawableStart="@drawable/calendar_icon"
        android:drawablePadding="60px"
        android:gravity="center_vertical"
        android:hint="@string/choose_date"
        android:paddingLeft="40px"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="40px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtinput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayEdTxt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleEdTxt"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:drawableStart="@drawable/ic_note"
            android:drawablePadding="80px"
            android:drawableTint="@color/blue1"
            android:hint="@string/title"
            app:layout_constraintTop_toBottomOf="@+id/dayEdTxt" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>